# FFmpegForAndroid

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/ismartv/ffmpegsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/java/cn/ismartv/ffmpegsample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/ismartv/ffmpegsample/: ExampleUnitTest.java
